recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:5: error: not found: value tableau
		tableau(i) = l(i)	
                ^butLast:7: error: type mismatch;
 found   : Array[Int]
 required: List[Int]
return rep
       ^